# tear-book

./: .gitignore  README.md  日志.txt  版本维护指南1.txt  程序解读1.txt  程序解读2.txt  网络资源搜索.txt
EduMind/: chat_prototype.py
EduMind/eduflow/: index.html  package-lock.json  package.json
EduMind/eduflow/src/: App.tsx  main.tsx
EduMind/eduflow/src-tauri/: Cargo.toml  tauri.conf.json
EduMind/eduflow/src-tauri/capabilities/: default.json
EduMind/eduflow/src-tauri/src/: main.rs
EduMind/eduflow/src/components/: AppIcon.css  AppIcon.tsx  BackPanel.css  BackPanel.tsx  Canvas.css  FrontPanel.css  FrontPanel.tsx  KnowledgeDetailModal.css  KnowledgeDetailModal.tsx  KnowledgeTree.css  KnowledgeTree.tsx  MathText.css  MathText.tsx  QuestionCard.css  QuestionCard.tsx  SettingsPanel.css  SettingsPanel.tsx
EduMind/eduflow/src/components/Canvas/: AppGrid.tsx  FileDropZone.tsx  index.tsx
EduMind/eduflow/src/components/Canvas/hooks/: index.ts  useBatchProcessor.ts  useFileProcessor.ts  useZsdManager.ts
EduMind/eduflow/src/hooks/: index.ts  useCrossWindowSync.ts
EduMind/eduflow/src/pages/: BackPanelWindow.css  BackPanelWindow.tsx  FrontPanelWindow.css  FrontPanelWindow.tsx
EduMind/eduflow/src/services/: documentTypeDetector.ts  fileUtils.ts  knowledgeExtractor.ts  learningContextManager.ts  pdfToImage.ts  questionGenerator.ts  siliconflow.ts  tauriEventBus.ts  windowManager.ts  zsd.ts
EduMind/eduflow/src/stores/: appStore.ts
EduMind/eduflow/src/styles/: global.css
EduMind/test/: api_test.py  ocr_compare_viewer.py  pdf_ocr_test.py  test_vision_base64.py
