[package]
name = "eduflow"
version = "0.1.0"
description = "多模态学习应用"
authors = ["EduFlow"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
